# iced-game-of-life

./: Cargo.toml
src/: main.rs
